@@ -23,4 +23,7 @@ hint success stats
 Remove variable from hint if value is out of bounds.
 New rule: Only update count of last level branching var when updating costs.
 Hinting: Update true score only if the hint was successful. Update the other score otherwise.
+EXP: branching rule 100%
+EXP: Always provide Solns
+EXP: Always add cuts
 
